# addressing_the_yan_report

./: README.md  index.html  pyproject.toml
.github/workflows/: marp-to-pages.yml
assets/bed/: sars_cov_2_genes_for_diagram.bed
assets/fasta/: illegal.fasta
assets/markdown/: yan_et_al_analysis.md
docs/: yan_et_al_analysis.html
scripts/: yan_et_al_analysis.py
src/builders/chart_label_builders/: __init__.py  chart_label_from_genomic_range.py
src/builders/genomic_range_builders/: __init__.py  build_genomic_range.py  build_genomic_range_list.py
src/constants/: __init__.py  analyses_config.py  colors.py  restriction_enzymes.py
src/dataclasses/: __init__.py  genomic_range.py  sequence_occurrence.py
src/genome_browser_overrides/: __init__.py  diagram_row.py  overridden_genome_diagram.py
src/loaders/: __init__.py  sole_sequence_from_fasta_file.py
src/matchers/: __init__.py  nonoverlapping_occurrences_of_sequence_in_genome.py
src/probabilities/: __init__.py  probability_of_kmer_occurring_n_times_in_text.py
test/: conftest.py
test/builders/chart_label_builders/: test_chart_label_from_genomic_range.py
test/builders/genomic_range_builders/: test_build_genomic_range_list.py
test/fixtures/: expected_genomic_ranges_from_patent.py  expected_genomic_ranges_from_sars_cov_2_bed_file.py  human_chromosome_1.py  sars_cov_2_genome.py
test/loaders/: test_sole_sequence_from_fasta_file.py
test/matchers/: test_nonoverlapping_occurrences_of_sequence_in_genome.py
test/probabilities/: test_probability_of_kmer_occurring_n_times_in_text.py
