[tool.poetry]
name = "addressing-the-yan-report"
version = "0.1.0"
description = "A fair trial of the most famous SARS-CoV-2 lab origin hypothesis."
authors = ["Anna Engel <anna.julia.engel@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
genome-browser = {git = "https://github.com/clintval/genome-browser.git", rev = "d073811"}
numpy = "^1.22.3"
python = ">=3.8,<3.11"
matplotlib = "^3.5.2"
more-itertools = "^8.13.0"
scipy = "^1.8.0"
pytest = "^7.1.2"
pandas = "^1.4.2"
ostruct = "^4.0.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
